[tool.poetry]
name = "stream-server"
version = "0.1.0"
description = ""
authors = ["Rohan McGovern <rohan@mcgovern.id.au>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
appdirs = "^1.4.4"
uvicorn = {version = "^0.17.6", extras = ["standard"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
uvicorn = "^0.17.6"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
